deploy/nexodus-monitoring/overlays/rosa/grafana/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana-access
  namespace: nexodus-monitoring
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: grafana-tls
spec:
  host: nexodus-grafana.apps.platform-sts.pcbk.p1.openshiftapps.com
  port:
    targetPort: https
  tls:
    termination: reencrypt
  to:
    kind: Service
    name: grafana-service
    weight: 100
  wildcardPolicy: None
